fixed ui alignment on the right side of the page

--- a/hawkbit-ui/src/main/resources/VAADIN/themes/hawkbit/customstyles/generic-styles.scss
+++ b/hawkbit-ui/src/main/resources/VAADIN/themes/hawkbit/customstyles/generic-styles.scss
@@ -100,8 +100,4 @@ $generic-text-font-size: $generic-text-font-scale * $v-font-size;
   .v-table-table {
     background: transparent;
   }
-
-  .rootLayout {
-    overflow: auto !important;
-  }
 }
